sites/all/themes/loo/css/video-controls.css
#main-player{
	background: rgba(25, 42, 53, 0.9);
	display: block;
	margin: 0 auto;
}
	
#player-history{
  
}

.player-button{
	margin: 0;
	height: 60px;
	width: 50px;
	border: none;
	background: rgba(25, 42, 53, 0.9);
    background-repeat: no-repeat;
    background-position: 10px 15px;
	vertical-align: top;
}

#play-button{
    background-image: url(/sites/all/themes/loo/images/play.png);
}

#volume-button{
    background-image: url(/sites/all/themes/loo/images/music-on.png);
}


#volume-control{
  display: block;
  position: absolute;
  bottom: 30px;
  right: 10px;
  display: none;
  cursor: pointer;
}

#info-panel-controls{
  background: rgba(25, 42, 53, 0.5);
  padding: 8px 8px 0 8px;
  text-align: left;
  margin: 0;
}

#info-panel-controls li{
  display: inline-block;
  padding: 5px 20px;
  background-color: rgb(75, 76, 82);
  color: white;
  font-weight: bold;
  font-size: 12px;
}


/* Doug's Land of Opportunity styles */

#video-container{
  width: 760px;
  margin: 0 auto;
}

#kettle{
  background: rgba(25, 42, 53, 0.9);
  padding: 0 20px;
  text-align: left;
  min-height: 500px;
}

.popcorn-subject{
  color: yellow;
  width: 300px;
  display: inline-block;
  padding: 0 20px;
  margin-right: 20px;
  vertical-align: top;
}

#kettle .popcorn-subject-heading{
  border-bottom: 2px solid blue;
  margin: 10px 0;
}

#video-container .popcorn-node{
  width: 300px;
  vertical-align: top;
}

#video-container .node-teaser{
  background-color: rgb(75, 76, 82);
	padding: 5px;
  color: #ffffff;
  font-weight: bold;
  font-size: 12px;
  border: 0;
}

#video-container .node-teaser h2{
  padding: 0;
}

#video-container .node-teaser a{
  color: rgb(234, 194, 82);
  font-style: italic;
}

#highlight{
  width: 300px;
  height: 60px;
  display: inline-block;
  vertical-align: top;
  background: rgba(25, 42, 53, 0.9);
    overflow: hidden;
}

canvas{
	padding: 0;
	margin: 0;
}

#highlight .node-teaser .content, #highlight .node-teaser .link-wrapper{
  display: none;
}

#highlight .node-teaser.preview .content, #highlight .node-teaser.preview .link-wrapper{
  display: block;
}

#highlight .node-teaser{
	margin: 0;
}

#highlight .node-teaser h2{
	font-size: 13px;
}

#highlight .popcorn-node{
	height: 30px;
}

